--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="Ver demoport" content="width=device-width, initial-scale=1">
-  <title>My portfolio</title>
+  <title>Bayron David</title>
+
+  <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Eo_circle_blue_letter-b.svg/2048px-Eo_circle_blue_letter-b.svg.png">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Bootstrap core CSS -->
   <!-- CSS only -->
@@ -16,7 +19,7 @@
 </head>
 <body>
   <main>
-    <canvas id="nokey" width="100%" height="110vh">
+    <canvas id="nokey" width="100%" height="130vh">
       Your Browser Don't Support Canvas, Please Download Chrome 
     </canvas>
 <!-- Description -->
