--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             JR Unity Developer
           </h4>
           
-          <p class="lead text-muted mt-2">Estudiante de noveno semestre de ingeniería en multimedia,
+          <p class="lead text-muted mt-2">Estudiante de decimo semestre de ingeniería en multimedia,
           con formación en ciencia de datos, desarrollo web y de
           videojuegos, apasionado por la creación de aplicaciones
           interactivas y con experiencia en automatizacion de pruebas.</p>
@@ -65,7 +65,18 @@
           <br>
           <!-- Games  -->
           <div class="container" id="GameDevelpment">
-        
+
+            <div class="text-center">
+              <iframe id="desktop" frameborder="0" src="https://itch.io/embed-upload/8041909?color=ffffff" allowfullscreen="" width="1280"
+                height="740"><a href="https://bayron-david.itch.io/recorrido-virtual">Play Recorrido Virtual on itch.io</a></iframe>
+
+              <iframe id="movil" src="https://itch.io/embed/1971179?link_color=008fbf" width="552" height="167"><a
+                  href="https://bayron-david.itch.io/recorrido-virtual">Recorrido Virtual by Bayron David, Karen Rincón</a></iframe>
+                <br>
+                <p>Un proyecto académico en el que se desarrolló un recorrido virtual de un laboratorio, integrando fotografías en 360
+                grados y modelos 3D, optimizado para web, tanto en escritorio como en dispositivos móviles. </p>
+            </div>
+            <hr>
             <!-- Relics -->
             <div class="card mb-3 mt-4">
               <div class="row g-0">
