--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/x-icon"
     href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Eo_circle_blue_letter-b.svg/2048px-Eo_circle_blue_letter-b.svg.png">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Bootstrap core CSS -->
   <!-- CSS only -->
@@ -26,6 +26,9 @@
     <canvas id="nokey" width="100%" height="130vh">
       Your Browser Don't Support Canvas, Please Download Chrome
     </canvas>
+
+    <!-- Boton Flotante -->
+    <a href="./media/CV Bayron Morales.pdf" target="_blank" class="btn btn-primary floating-button"><b>CV</b> <i class="fa-solid fa-download fa-fade"></i>   </a>
     <!-- Description -->
     <section class="text-center container inicio">
       <div class="row py-lg-5">
@@ -312,7 +315,6 @@
         <hr>
         <!-- WiridLab-->
         <div class="card mb-3 mt-4">
-          <h2 class="text-center">Demo</h2>
           <div class="row g-0">
             <div class="text-center">
               <iframe id="desktop" frameborder="0" src="https://itch.io/embed-upload/8041909?color=ffffff" allowfullscreen=""
